[gd_scene load_steps=20 format=3 uid="uid://b16dwc6f16ssl"]

[ext_resource type="Script" path="res://Tscn/Enemy/Scripts/World.gd" id="1_613mj"]
[ext_resource type="Script" path="res://Tscn/Enemy/Scripts/Tiles.gd" id="2_delhp"]
[ext_resource type="Texture2D" uid="uid://boduwjjau7pjw" path="res://PNG/Tiles/back_grounds.png" id="2_wk2m6"]
[ext_resource type="Texture2D" uid="uid://c1c5niqfpepw" path="res://PNG/Tiles/tile_32x32.png" id="5_e1cq6"]
[ext_resource type="Texture2D" uid="uid://clfiynuyu4woa" path="res://PNG/Tiles/tile_8x8.png" id="6_igtla"]
[ext_resource type="Script" path="res://Tscn/Enemy/Scripts/Enemys_group.gd" id="7_6vm0h"]
[ext_resource type="PackedScene" uid="uid://d1ay6fc2acavl" path="res://Saves/save_assemblys.tscn" id="9_j45hu"]
[ext_resource type="PackedScene" uid="uid://cl5soawnickai" path="res://Tscn/small_tscn/mouse.tscn" id="10_ct367"]
[ext_resource type="Environment" uid="uid://bxtjnvlpn4qo6" path="res://Tres/nor_environment.tres" id="14_bn4h1"]
[ext_resource type="Script" path="res://Tscn/Enemy/Scripts/Camera_nor.gd" id="14_s4mh2"]
[ext_resource type="PackedScene" uid="uid://bif423ahnijn8" path="res://Tscn/UI_scn/ui_canvas.tscn" id="16_fpwow"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jit37"]
texture = ExtResource("2_wk2m6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0

[sub_resource type="TileSet" id="TileSet_wkxfg"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_jit37")

[sub_resource type="TileSet" id="TileSet_s7qdh"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 255
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m7jsu"]
texture = ExtResource("5_e1cq6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/probability = 0.01
1:0/0 = 0
1:0/0/probability = 0.01
2:0/0 = 0
2:0/0/probability = 0.01
3:0/0 = 0
3:0/0/probability = 0.01
4:0/0 = 0
4:0/0/probability = 0.01
5:0/0 = 0
5:0/0/probability = 0.01
6:0/0 = 0
6:0/0/probability = 0.01
7:0/0 = 0
7:0/0/probability = 0.01
8:0/0 = 0
8:0/0/probability = 0.01
9:0/0 = 0
9:0/0/probability = 0.01
0:1/0 = 0
0:1/0/probability = 0.01
1:1/0 = 0
1:1/0/probability = 0.01
2:1/0 = 0
2:1/0/probability = 0.01
3:1/0 = 0
3:1/0/probability = 0.01
4:1/0 = 0
4:1/0/probability = 0.01
5:1/0 = 0
5:1/0/probability = 0.01
6:1/0 = 0
6:1/0/probability = 0.01
7:1/0 = 0
7:1/0/probability = 0.01
8:1/0 = 0
8:1/0/probability = 0.01
9:1/0 = 0
9:1/0/probability = 0.01
3:2/0 = 0
3:2/0/probability = 0.7
4:2/0 = 0
4:2/0/probability = 0.7
5:2/0 = 0
5:2/0/probability = 0.7
6:2/0 = 0
6:2/0/probability = 0.7
7:2/0 = 0
7:2/0/probability = 0.7
8:2/0 = 0
8:2/0/probability = 0.7
9:2/0 = 0
9:2/0/probability = 0.7
2:2/0 = 0
2:2/0/probability = 0.7
1:2/0 = 0
1:2/0/probability = 0.7
0:2/0 = 0
0:2/0/probability = 0.7

[sub_resource type="TileSet" id="TileSet_l8xes"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_m7jsu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2gsh2"]
texture = ExtResource("6_igtla")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/probability = 0.01
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/probability = 0.01
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/probability = 0.01
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/probability = 0.01
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/probability = 0.01
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/probability = 0.01
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/probability = 0.01
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/probability = 0.01
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/probability = 0.01
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/probability = 0.01
0:2/0 = 0
0:2/0/terrain_set = 0
1:2/0 = 0
1:2/0/terrain_set = 0
2:2/0 = 0
2:2/0/terrain_set = 0
3:2/0 = 0
3:2/0/terrain_set = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:3/0 = 0
4:3/0/terrain_set = 0
3:3/0 = 0
3:3/0/terrain_set = 0
2:3/0 = 0
2:3/0/terrain_set = 0
1:3/0 = 0
1:3/0/terrain_set = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
0:7/0 = 0
4:8/0 = 0
3:8/0 = 0
2:8/0 = 0
1:8/0 = 0
0:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0

[sub_resource type="TileSet" id="TileSet_jsygq"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_2gsh2")

[sub_resource type="CircleShape2D" id="CircleShape2D_8hafa"]
radius = 1.0

[node name="DEV_" type="Node2D"]
process_mode = 3

[node name="World" type="Node2D" parent="."]
script = ExtResource("1_613mj")

[node name="Tiles" type="Node2D" parent="World"]
z_index = -2
script = ExtResource("2_delhp")

[node name="background" type="TileMap" parent="World/Tiles"]
texture_filter = 1
position = Vector2(0, -2)
tile_set = SubResource("TileSet_wkxfg")
format = 2
metadata/_edit_lock_ = true

[node name="wall" type="TileMap" parent="World/Tiles"]
texture_filter = 1
tile_set = SubResource("TileSet_s7qdh")
format = 2

[node name="plant_32x32" type="TileMap" parent="World/Tiles"]
tile_set = SubResource("TileSet_l8xes")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(524274, 262144, 2, 524275, 262144, 2, 524276, 262144, 2, 524277, 393216, 2, 524278, 458752, 2, 524279, 0, 2, 524280, 0, 2, 524281, 196608, 2, 524282, 524288, 2, 524283, 196608, 2, 524284, 327680, 2, 524285, 589824, 2, 524286, 393216, 2, 524287, 327680, 2, 458752, 524288, 2, 458753, 196608, 2, 458754, 458752, 2, 458755, 65536, 2, 458756, 524288, 2, 458757, 524288, 2, 458758, 393216, 2, 458759, 0, 2, 458760, 0, 2, 458761, 262144, 2, 458762, 262144, 2, 458763, 196608, 2, 458764, 262144, 2, 458765, 0, 2)

[node name="plant_8x8" type="TileMap" parent="World/Tiles"]
tile_set = SubResource("TileSet_jsygq")
rendering_quadrant_size = 8
format = 2

[node name="Timer" type="Timer" parent="World/Tiles"]
one_shot = true
autostart = true

[node name="Enemys_group" type="Node" parent="World"]
process_mode = 1
script = ExtResource("7_6vm0h")

[node name="Enemys" type="Node" parent="World/Enemys_group"]

[node name="Timer" type="Timer" parent="World/Enemys_group"]
one_shot = true
autostart = true

[node name="Other" type="Node" parent="World"]

[node name="Camera2D" type="Camera2D" parent="World/Other"]
position_smoothing_enabled = true
script = ExtResource("14_s4mh2")

[node name="Area2D" type="Area2D" parent="World/Other/Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Other/Camera2D/Area2D"]
shape = SubResource("CircleShape2D_8hafa")

[node name="Mouse" parent="World/Other" instance=ExtResource("10_ct367")]

[node name="Assemblys" parent="World" instance=ExtResource("9_j45hu")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = ExtResource("14_bn4h1")

[node name="UICanvas" parent="." instance=ExtResource("16_fpwow")]

[connection signal="timeout" from="World/Tiles/Timer" to="World/Tiles" method="_on_timer_timeout"]
[connection signal="timeout" from="World/Enemys_group/Timer" to="World/Enemys_group" method="_on_timer_timeout"]
[connection signal="area_entered" from="World/Other/Camera2D/Area2D" to="World/Other/Camera2D" method="_on_area_2d_area_entered"]
